# IT-service-desk

./: .env.template  .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: error.rs  main.rs
app/src/dto/: common.rs  mod.rs  tickets.rs  users.rs
app/src/middleware/: auth.rs
app/src/routes/: mod.rs  tickets.rs  users.rs
core/: Cargo.toml
core/src/: emr.rs  lib.rs  mail.rs  secret.rs  ssm.rs
docs/: database.sql
public/: index.html  package-lock.json  package.json
public/src/: App.vue
public/src/layouts/: MainLayout.vue
public/src/router/: index.ts
public/src/views/: AwsAccountView.vue  DashboardView.vue  LoginView.vue  ResourceManagementView.vue  SettingsView.vue  TicketApplyView.vue  TicketApproveView.vue  UsersView.vue
respository/: Cargo.toml  README.md  TESTING.md
respository/.sqlx/: query-07eeda4be0123c549ab45be3dace4b58bd9ae29cce63f198e155fb6cfd1c66cf.json  query-0ba977593a872ae0cec1a40b88886d7f747a81d28fc6429fe9fd5320d5cf89a9.json  query-201c2aa5e3549550a160d86c1e72bf980c0431e361890c97d87538bb2456e315.json  query-24ad8015778747de2de103ab104a364fe4d4b3669c977ff7ad0f9212310fd74f.json  query-287eac1e4b87a329baad83e57efa78e65737232b2d416afb78677bba37ef2f49.json  query-2dd0947cd658eccc7fe63b12dd985f6d3072d69bf9b48e8157e55a763190a93f.json  query-3b8235ac666aa28d4cd50a9a602406ecd8d526cf86ae520af9c14d3c6f8fbd3b.json  query-50ce0b81c67a825bf5657687dd46a8358aff91fd8f1086ff6c6c7ea417b0c57c.json  query-52e3bb85583287e802dedbb3f4607d01c188fbf722e622bf742b5a2671b44196.json  query-567a7e1549d542ce5035100f10c8c65db90cee12ea857ecdff99f78c66c55766.json  query-652d173a3af3e05f8e67e2c93d0e545802186b5630bdcbac6f76c7bc906bd1b3.json  query-653cec50de2994f8a72c84b61dd1249e08e2555c6088daf1b4b26c8da4505205.json  query-6607d745c55d8abdc2d66bb026c8059b1b65e2b847537a207736fd45594aa9ef.json  query-6aa626e7f512f72569a7db02ce75b85ca7ed6741177823fa5c740d8e62bf8567.json  query-9343bf0b0bf59750bfcd835059c4d370a83f3b7560fa5487c6dd78f451adad1f.json  query-96a13850fe95c8a214dc64f3020c83dd03e5ce32b02fc9617c5204ea516d604e.json  query-98a1105894fd8f573c834dd5b1c3cea34aad00586a16d56a045d0ba84e5de3cf.json  query-a507e708db36d4f834fc6e1eb6401acbd484d1be96ec444a8ef3f7f4a8da2414.json  query-a62e9c203fcedaa4ab278d62ccd404f646ef7751aa6b8cef9b95f9f4b1cdd88b.json  query-a7e66858dcc94ed8c9605fc360ac2bd67148746fcad63a6d02cd9364f4192987.json  query-a95cb232c9173dd39fba420afa8ffdb24b7bbc5a179c9577426575f7cef93761.json  query-afe8b9bb5891dbf6f07d83a54c7b0a8725953acbb785d26ae4589ce1ffac6521.json  query-c8f13175d133fcf6eb50162843588f770f8297aed3b3378359b6339b095540f3.json  query-db9d5c4ad0e1555bc5fcee3890ba6e5355c2ebc886de738a776e165423867480.json  query-dfaf635b48d5d6eca1ae1e107203c1aa77fae42a61df6a944c26cd640af3aca3.json  query-e3331c498f740cf1f47b4b969de7989b65026a5b1404d6efb33f3b8003c41e4c.json  query-f1cdb6f9cb774a848424edfd1ba0d9c24ec95f8ec028fc82c902dd35ddc43327.json  query-f88b100a095e6829f4f227aeeb52032b77833bcfdd36488c40cfa1f3d729fa57.json  query-faf311457bf44430003c24b369c2a5ee2adda2f00bbbefe7439e5e290c1eccc4.json
respository/migrations/: 20260216135132_init_db.sql
respository/src/: lib.rs
respository/src/dao/: mod.rs  tickets_dao.rs  users_dao.rs
respository/src/models/: mod.rs  tickets.rs  users.rs
respository/tests/: tickets_dao_tests.rs  users_dao_tests.rs
service/: Cargo.toml
service/src/: lib.rs  tickets.rs
service/src/domain/: tickets.rs
service/src/service/: tickets.rs
