[workspace.package]
name = "IT-service-desk"
version = "0.1.0"
edition = "2021"
description = "IT service deck"

[workspace]
members = ["core", "app", "service", "respository"]
default-members = ["app"]
resolver = "3"


[workspace.dependencies]
anyhow = "1.0.101"
dotenvy = "0.15.7"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8", features = ["postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
