[package]
name = "web-app"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.8" }
chrono = { workspace = true }
dotenvy = { workspace = true }
jsonwebtoken = "10.3.0"
respository = { version = "0.1.0", path = "../respository" }
serde = { workspace = true }
serde_json = { workspace = true }
service = { version = "0.1.0", path = "../service" }
sqlx = { workspace = true, features = ["postgres"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
