[package]
name = "core"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = "1.8.13"
aws-sdk-emr = "1.102.0"
aws-sdk-secretsmanager = "1.99.0"
aws-sdk-ssm = "1.103.0"
dotenvy = { workspace = true }
lettre = { version = "0.11.19", features = ["tokio1", "hostname", "builder", "smtp-transport", "pool", "tokio1-native-tls"] }
serde = {workspace = true}
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
