[package]
name = "respository"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
dotenvy = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
