[package]
name = "respository"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = {workspace = true}
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
