[package]
name = "service"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
core = { version = "0.1.0", path = "../core" }
dotenvy = { workspace = true }
respository = { version = "0.1.0", path = "../respository" }
sqlx = { workspace = true, features = ["postgres"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }