[package]
name = "service"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
core = { version = "0.1.0", path = "../core" }
dotenvy = { workspace = true }
respository = { version = "0.1.0", path = "../respository" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
